Add details to solution 1.

--- a/symmetric_fxns/sym1.tex
+++ b/symmetric_fxns/sym1.tex
@@ -43,7 +43,7 @@
 \newtheorem{corollary}{Corollary}
 \newtheorem*{definition}{Definition}
 \newtheorem*{example}{Example}
-\newtheorem*{note}{Note}
+ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss\newtheorem*{note}{Note}
 \newtheorem{exercise}{Exercise}
 \newcommand{\bproof}{\bigskip {\bf Proof. }}
 \newcommand{\eproof}{\hfill\qedsymbol}
@@ -235,7 +235,8 @@
   using the recurrence relations
 
   \begin{align*}
-    b_0 = a_0^{-1}, \quad b_n = -a_0^{-1} \sum\limits_{i=1}^{\infty}a_i b_{n-i}, \quad n \geq 1.
+    b_0 = a_0^{-1}, \quad b_n = -a_0^{-1} \sum\limits_{i=1}^{n
+    }a_i b_{n-i}, \quad n \geq 1.
   \end{align*}
 
   We have for $n=0$
