--- a/symmetric_fxns/sym2.tex
+++ b/symmetric_fxns/sym2.tex
@@ -76,15 +76,45 @@
 \begin{proof}
   If $\pi \in H$, then for any $f \in Pol_n^H$, $f^{\pi} = f$, so that $\pi \in G(Pol_n^H)$, $H \subseteq G(Pol_n^H)$.
 
-  We note that $\sum\limits_{\alpha \in \lambda H} x^{\alpha} \in Pol_n^H$, for all partitions $\lambda \in Par_n$, and in particular for $\lambda = (n, n-1, \dots, 1)$.
-  
-  Let $\pi \in G(Pol_n^H)$, then there exists some $\sigma \in H$ such that
+  We note that $f_{\lambda} := \sum\limits_{\alpha \in \lambda H} x^{\alpha} \in Pol_n^H$, for all partitions $\lambda \in Par_n$.
+  \footnote{Let $x^\alpha$ be a term in $f_{\lambda}$, where $\alpha = \lambda^{\sigma}$ for some $\sigma \in H$; then for $\pi \in H$ we have
   \begin{align*}
-    {(x^{\lambda})}^{\pi} = x_{\pi(1)}^nx_{\pi(2)}^{n-1} \cdots x_{\pi(n)} = x_{\sigma(1)}^nx_{\sigma(2)}^{n-1} \cdots x_{\sigma(n)} = {(x^{\lambda})}^{\sigma},
+    (x^\alpha)^{\pi}
+    &= x_{\pi(1)}^{\alpha_1} \cdots x_{\pi(n)}^{\alpha_n} \\
+    &= x_{1}^{\alpha_{\pi^{-1}(1)}} \cdots x_{n}^{\alpha_{\pi^{-1}(n)}} \\
+    &= x^{\alpha^{\pi^{-1}}} \\ 
+    &= x^{{\lambda^{\sigma}}^{\pi^{-1}}}.
   \end{align*}
-  and so $\pi = \sigma \in H$, $G(Pol_n^H) \subseteq H$.
 
-  We've shown $H = G(Pol_n^H)$.
+  As $\pi^{-1} \in H$, $H\pi^{-1} = H$, and so 
+  
+  \begin{align*}
+    \set{\lambda^{\sigma \pi^{-1}}: \sigma \in H} = \lambda(H \pi^{-1}) = \lambda H,
+  \end{align*}
+  and we end up with the same index set $\lambda H$.
+
+  We conclude that $\pi$ fixes $f_{\lambda}$.
+
+  }
+
+  
+
+  We have:
+  \begin{align*}
+    x_{\pi(1)}^nx_{\pi(2)}^{n-1} \cdots x_{\pi(n)}
+    &= x_1^{\lambda_{\sigma(1)}} x_2^{\lambda_{\sigma(2)}} \cdots x_n^{\lambda_{\sigma(n)}} \\
+    &= x_{\sigma^{-1}(1)}^{\lambda_1} x_{\sigma^{-1}(2)}^{\lambda_2} \cdots x_{\sigma^{-1}(n)}^{\lambda_n} \\
+    &= x_{\sigma^{-1}(1)}^{n} x_{\sigma^{-1}(2)}^{n-1} \cdots x_{\sigma^{-1}(n)}^{1} \\
+  \end{align*}
+  As the parts of the partition are all distinct, we must have for each $1 \leq i \leq n$,
+  \begin{align*}
+    x_{\pi(i)}^{n-i+1} = x_{\sigma^{-1}(i)}^{n-i+1},
+  \end{align*}
+  which implies that for all $1 \leq i \leq n$,
+  \begin{align*}
+    \pi(i) = \sigma^{-1}(i),
+  \end{align*}
+  i.e. $\pi = \sigma^{-1} \in H$, $G(Pol_n^H) \subseteq H$, $G(Pol_n^H) = H$.
 
 \end{proof}
 
