Remove pointless new paragraph.

--- a/symmetric_fxns/sym2.tex
+++ b/symmetric_fxns/sym2.tex
@@ -154,8 +154,6 @@
   , we have $a_{\lambda_i}=0$ for each $i$, i.e. $f=0$ and $\rho_{m,n}^k$ is injective.
 
   %gotta be more careful here...
-  Let $m>n$,$k>n$.
-
-  If $m \leq k$, then choose $\lambda \in Par_m(k)$ and if $m > k$ choose $\lambda \in Par_k(k)$. With this choice of $\lambda$, $m_{\lambda}(x_1, \dots, x_m) \neq 0$, since $\ell(\lambda) \leq m$, and $\rho_{m,n}^k(m_{\lambda}(x_1, \dots, x_m)) =  m_{\lambda}(x_1, \dots, x_n) = 0$, since $\ell(\lambda) > n$. Hence, \rho_{m,n}^k$ is not injective, so not bijective. 
+  Let $m>n$,$k>n$. If $m \leq k$, then choose $\lambda \in Par_m(k)$ and if $m > k$ choose $\lambda \in Par_k(k)$. With this choice of $\lambda$, $m_{\lambda}(x_1, \dots, x_m) \neq 0$, since $\ell(\lambda) \leq m$, and $\rho_{m,n}^k(m_{\lambda}(x_1, \dots, x_m)) =  m_{\lambda}(x_1, \dots, x_n) = 0$, since $\ell(\lambda) > n$. Hence, \rho_{m,n}^k$ is not injective, so not bijective. 
 \end{proof}
 \end{document}
