--- a/symmetric_fxns/sym2.tex
+++ b/symmetric_fxns/sym2.tex
@@ -128,7 +128,7 @@
 \end{exercise}
 \begin{proof}
   Let $g \in Sym_n^k$, then $g \in Sym_n$. As $\rho_{m,n}$ is surjective, there exists an $f \in Sym_m$ such that $\rho_{m,n}(f) = g$. We decompose $f$ into it's homogeneous components as $f = \sum\limits_{i} f_i$, and write
-  \footnote{$f = \sum\limits_{0 \leq i \leq d} f_i$ is of bounded degree, but just to keep notation clean I left that out.}
+  \footnote{$f = \sum\limits_{0 \leq i \leq d} f_i$ has bounded degree.}
   \begin{align*}
     \sum\limits_i \rho_{m,n}(f_i) =  \rho_{m,n}(f) = g
   \end{align*}
