Give a preliminary answer for last question.

--- a/symmetric_fxns/sym3.tex
+++ b/symmetric_fxns/sym3.tex
@@ -186,4 +186,15 @@
 \begin{exercise}
   Find and prove a formula for $M_{\lambda, (1^n)}(p,m)$, where $\lambda \vdash n$.
 \end{exercise}
+
+\begin{proof}
+  We require that the rows have constant entries in the filled tableaux, but our weight requires that we have exactly one of each entry, so we must have
+  \begin{align*}
+    M_{\lambda, (1^n)}(p,m) =
+    \begin{cases}
+      n! & \text{ if } \lambda = (1^n) \\
+      0 & \text{ otherwise}
+    \end{cases}
+  \end{align*}
+\end{proof}
 \end{document}
