Add a line ot justify the first solution.

--- a/symmetric_fxns/sym4.tex
+++ b/symmetric_fxns/sym4.tex
@@ -91,7 +91,7 @@
     &= \sgn(\sigma)a_{\alpha},
   \end{align*}
   where we used the group morphism properties of $\sgn: \mathfrak{S_n} \to \set{-1,1}$, specifically that
-  $\sgn(\pi) = \sgn(\pi \sigma^{-1} \sigma) = \sgn(\pi \sigma^{-1}) \sgn(\sigma)$.
+  $\sgn(\pi) = \sgn(\pi \sigma^{-1} \sigma) = \sgn(\pi \sigma^{-1}) \sgn(\sigma)$; and also that $\mathfrak{S}_n{\sigma^{-1}} = \mathfrak{S}_n$.
 \end{proof}
 \begin{exercise}
   Using only results from Section 3.2 and earlier in the lecture notes, write the Schur function $s_{(3,1)}$ as a linear combination of the complete homogeneous symmetric functions, the elementary symmetric functions, and the monomial symmetric functions. \emph{Hint}: Use your expression in terms of the complete homogeneous symmetric functions or the elementary symmetric functions to deduce an expression in terms of the monomial symmetric functions. 
