Work on problem.

--- a/symmetric_fxns/sym5.tex
+++ b/symmetric_fxns/sym5.tex
@@ -96,6 +96,20 @@
   \begin{align*}
     s_{(3,3,1)/(2,1)} = \sum\limits_{\nu \in Par} K_{(3,3,1)/(2,1), \nu} m_{\nu}
   \end{align*}
+  Tableaux of weight $\nu=(3,1)$:
+  \begin{align*}
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 1 & 2 \\
+      1
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 1 & 1 \\
+      2
+    \end{ytableau}
+  \end{align*}
+  
 \end{proof}
 
 \begin{exercise}
