--- a/symmetric_fxns/sym5.tex
+++ b/symmetric_fxns/sym5.tex
@@ -94,9 +94,13 @@
 \begin{proof}
   By Proposition 3.4.15, we have
   \begin{align*}
-    s_{(3,3,1)/(2,1)} = \sum\limits_{\nu \in Par} K_{(3,3,1)/(2,1), \nu} m_{\nu}
+    s_{(3,3,1)/(2,1)} = \sum\limits_{\nu \in Par} K_{(3,3,1)/(2,1), \nu} m_{\nu}.
   \end{align*}
-  Tableaux of weight $\nu=(3,1)$:
+  where $K_{(3,3,1)/(2,1), \nu}$ is the number of semi standard skew tableaux of shape $(3,3,1)/(2,1)$ and weight $\nu$. Now, $s_{(3,3,1)/(2,1)}$ is homogeneous of degree $(3+3+1) - (2+1) = 4$, and so we check all possible fillings with weight $\nu \in Par(4)$:
+
+  $K_{(3,3,1)/(2,1), (4)} = 0$, because putting an one in the top right box constrains us to put something else in the box below it. 
+
+  $K_{(3,3,1)/(2,1),(3,1)} = 2$:
   \begin{align*}
     \begin{ytableau}
       \none & \none & 1 \\
@@ -107,9 +111,107 @@
       \none & \none & 1 \\
       \none & 1 & 1 \\
       2
-    \end{ytableau}
+    \end{ytableau} \quad .
+  \end{align*}
+
+  $K_{(3,3,1)/(2,1),(2,2)} = 3$:
+  \begin{align*}
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 1 & 2 \\
+      2
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 2 & 2 \\
+      1
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 2 \\
+      \none & 1 & 2 \\
+      1
+    \end{ytableau}\quad .
   \end{align*}
   
+  $K_{(3,3,1)/(2,1),(2,1,1)} = 5$:
+  \begin{align*}
+    &\begin{ytableau}
+      \none & \none & 1 \\
+      \none & 1 & 2 \\
+      3
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 1 & 3 \\
+      2
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 2 & 3 \\
+      1
+    \end{ytableau}\quad,\\
+    &
+    \begin{ytableau}
+      \none & \none & 2 \\
+      \none & 1 & 3 \\
+      1
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 2 \\
+      \none & 1 & 1 \\
+      3
+    \end{ytableau} \quad .
+  \end{align*}
+
+  $K_{(3,3,1)/(2,1),(1^4)} = 8$:
+  \begin{align*}
+    &\begin{ytableau}
+      \none & \none & 1 \\
+      \none & 2 & 3 \\
+      4
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 2 & 4 \\
+      3
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 1 \\
+      \none & 3 & 4 \\
+      2
+    \end{ytableau}\quad, \\
+    &
+    \begin{ytableau}
+      \none & \none & 2 \\
+      \none & 3 & 4 \\
+      1
+    \end{ytableau}\quad,\quad 
+    \begin{ytableau}
+      \none & \none & 2 \\
+      \none & 1 & 4 \\
+      3
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 2 \\
+      \none & 1 & 3 \\
+      4
+    \end{ytableau}\quad,\\
+    &
+    \begin{ytableau}
+      \none & \none & 3 \\
+      \none & 1 & 4 \\
+      2
+    \end{ytableau}\quad,\quad
+    \begin{ytableau}
+      \none & \none & 3 \\
+      \none & 2 & 4 \\
+      1
+    \end{ytableau}\quad.
+    \end{align*}
+  Thus,
+  \begin{align*}
+    s_{(3,3,1)/(2,1)} = 2m_{(3,1)} + 3m_{(2,2)} + 5m_{(2,1,1)} + 8m_{(1^4)}.
+  \end{align*}
 \end{proof}
 
 \begin{exercise}
@@ -123,6 +225,11 @@
   \end{align*}
 \end{exercise}
 \begin{proof}
+  By prop 3.4.15 we have
+  \begin{align*}
+    s_{\lambda/\mu} = \sum\limits_{\nu \in Par} K_{\lambda/\mu, \nu} m_{\nu},
+  \end{align*}
+  so
   \begin{align*}
     \< s_{\lambda / \mu}, h_{\nu} \>
     &= \< \sum\limits_{\rho \in Par} K_{\lambda/\mu, \rho} m_{\rho} , h_{\nu} \> \\
@@ -131,12 +238,13 @@
     &= \sum\limits_{\rho \in Par} K_{\lambda/\mu, \rho} \delta_{\nu \rho} \\
     &= K_{\lambda/\mu, \nu}, \\    
   \end{align*}
-  and
+  where we used the bilinearity and symmetry of the inner product, and it's definition.
   \begin{align*}
     \< s_{\lambda / \mu}, e_{\nu} \>
     &= \< \omega(s_{\lambda / \mu}), \omega(e_{\nu}) \> \\
     &= \< s_{\lambda' / \mu'}, h_{\nu} \> \\
-    &= K_{\lambda' / \mu', \nu}.
+    &= K_{\lambda' / \mu', \nu},
   \end{align*}
+  where we used that the inner product is invariant under $\omega$, that $\omega(s_{\lambda/\mu}) = s_{\lambda'/\mu'}$,  $\omega(e_{\nu}) = h_{\nu}$, and our result from the previous part of this question.
 \end{proof}
 \end{document}
