--- a/symmetric_fxns/sym5.tex
+++ b/symmetric_fxns/sym5.tex
@@ -96,25 +96,20 @@
   \begin{align*}
     s_{(3,3,1)/(2,1)} = \sum\limits_{\nu \in Par} K_{(3,3,1)/(2,1), \nu} m_{\nu}.
   \end{align*}
-  where $K_{(3,3,1)/(2,1), \nu}$ is the number of semi standard skew tableaux of shape $(3,3,1)/(2,1)$ and weight $\nu$. Now, $s_{(3,3,1)/(2,1)}$ is homogeneous of degree $(3+3+1) - (2+1) = 4$, and so we check all possible fillings with weight $\nu \in Par(4)$:
+  where $K_{(3,3,1)/(2,1), \nu}$ is the number of semi standard skew tableaux of shape $(3,3,1)/(2,1)$ and weight $\nu$. Now, $s_{(3,3,1)/(2,1)}$ is homogeneous of degree $(3+3+1) - (2+1) = 4$, and so $K_{(3,3,1)/(2,1), \nu} = 0$ for $\nu \not \in Par(4)$. It remains to check all possible fillings with weight $\nu \in Par(4)$.
 
   $K_{(3,3,1)/(2,1), (4)} = 0$, because putting an one in the top right box constrains us to put something else in the box below it. 
 
-  $K_{(3,3,1)/(2,1),(3,1)} = 2$:
+  $K_{(3,3,1)/(2,1),(3,1)} = 1$:
   \begin{align*}
     \begin{ytableau}
       \none & \none & 1 \\
       \none & 1 & 2 \\
       1
-    \end{ytableau}\quad,\quad
-    \begin{ytableau}
-      \none & \none & 1 \\
-      \none & 1 & 1 \\
-      2
-    \end{ytableau} \quad .
+    \end{ytableau}\quad.\quad
   \end{align*}
 
-  $K_{(3,3,1)/(2,1),(2,2)} = 3$:
+  $K_{(3,3,1)/(2,1),(2,2)} = 2$:
   \begin{align*}
     \begin{ytableau}
       \none & \none & 1 \\
@@ -125,15 +120,10 @@
       \none & \none & 1 \\
       \none & 2 & 2 \\
       1
-    \end{ytableau}\quad,\quad
-    \begin{ytableau}
-      \none & \none & 2 \\
-      \none & 1 & 2 \\
-      1
-    \end{ytableau}\quad .
+    \end{ytableau}\quad.\quad
   \end{align*}
   
-  $K_{(3,3,1)/(2,1),(2,1,1)} = 5$:
+  $K_{(3,3,1)/(2,1),(2,1,1)} = 4$:
   \begin{align*}
     &\begin{ytableau}
       \none & \none & 1 \\
@@ -155,12 +145,7 @@
       \none & \none & 2 \\
       \none & 1 & 3 \\
       1
-    \end{ytableau}\quad,\quad
-    \begin{ytableau}
-      \none & \none & 2 \\
-      \none & 1 & 1 \\
-      3
-    \end{ytableau} \quad .
+    \end{ytableau}\quad.\quad
   \end{align*}
 
   $K_{(3,3,1)/(2,1),(1^4)} = 8$:
@@ -210,7 +195,7 @@
     \end{align*}
   Thus,
   \begin{align*}
-    s_{(3,3,1)/(2,1)} = 2m_{(3,1)} + 3m_{(2,2)} + 5m_{(2,1,1)} + 8m_{(1^4)}.
+    s_{(3,3,1)/(2,1)} = m_{(3,1)} + 2m_{(2,2)} + 4m_{(2,1,1)} + 8m_{(1^4)}.
   \end{align*}
 \end{proof}
 
@@ -239,12 +224,16 @@
     &= K_{\lambda/\mu, \nu}, \\    
   \end{align*}
   where we used the bilinearity and symmetry of the inner product, and it's definition.
+
+  We note that $\lambda \supseteq \mu$ implies that the tableau of shape $\mu$ is contained in the tableau of shape $\lambda$ (assuming they're both top-left aligned), so that in particular all the columns of the tableau of shape $\mu$ are contained in the tableau of shape $\lambda$,
+  i.e. $\lambda_i' \geq \mu_i'$, for each $i$, so that $\lambda' \supseteq \mu'$. Thus, we can use the result we just found, alongside the fact that the inner product is invariant under $\omega$,
+  and that $\omega(s_{\lambda/\mu}) = s_{\lambda',\mu'}$ and $\omega(e_{\nu}) = h_{\nu}$ to get: 
   \begin{align*}
     \< s_{\lambda / \mu}, e_{\nu} \>
     &= \< \omega(s_{\lambda / \mu}), \omega(e_{\nu}) \> \\
     &= \< s_{\lambda' / \mu'}, h_{\nu} \> \\
-    &= K_{\lambda' / \mu', \nu},
+    &= K_{\lambda' / \mu', \nu}.
   \end{align*}
-  where we used that the inner product is invariant under $\omega$, that $\omega(s_{\lambda/\mu}) = s_{\lambda'/\mu'}$,  $\omega(e_{\nu}) = h_{\nu}$, and our result from the previous part of this question.
+
 \end{proof}
 \end{document}
