--- a/symmetric_fxns/sym5.tex
+++ b/symmetric_fxns/sym5.tex
@@ -172,19 +172,19 @@
     &
     \begin{ytableau}
       \none & \none & 2 \\
-      \none & 3 & 4 \\
-      1
-    \end{ytableau}\quad,\quad 
+      \none & 1 & 3 \\
+      4
+    \end{ytableau}\quad, 
     \begin{ytableau}
       \none & \none & 2 \\
       \none & 1 & 4 \\
       3
-    \end{ytableau}\quad,\quad
+    \end{ytableau}\quad,\quad 
     \begin{ytableau}
       \none & \none & 2 \\
-      \none & 1 & 3 \\
-      4
-    \end{ytableau}\quad,\\
+      \none & 3 & 4 \\
+      1
+    \end{ytableau}\quad,\quad \\
     &
     \begin{ytableau}
       \none & \none & 3 \\
