--- a/symmetric_fxns/sym6.tex
+++ b/symmetric_fxns/sym6.tex
@@ -357,164 +357,324 @@
         \end{ytableau} \quad .
       \end{align*}
       The third row is $(1,2,2,3,0)$.
-    \end{itemize}
-  \item
-    $\lambda(1^4)$:
+    \item
+      $\lambda(1^4)$:
 
-    $L_{\lambda, (4)} = 1 $:
-    \begin{align*}
-      \begin{ytableau}
-        1 \\
-        1 \\
-        1 \\
-        1
-      \end{ytableau}\quad.
-    \end{align*}
-
-    $L_{\lambda, (3,1)} = 4 $:
-    \begin{align*}
-      \begin{ytableau}
-        1 \\
-        1 \\
-        1 \\
-        2
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        1 \\
-        2 \\
-        1
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        2 \\
-        1 \\
-        1
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        2 \\
-        1 \\
-        1 \\
-        1
-      \end{ytableau}\quad.\quad            
-    \end{align*}
-
-    $L_{\lambda, (2,2)} = 6$:
-
-    \begin{align*}
-      \begin{ytableau}
-        1 \\
-        1 \\
-        2 \\
-        2
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        2 \\
-        1 \\
-        2
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        2 \\
-        2 \\
-        1
-      \end{ytableau}\quad,\quad \\
-      \begin{ytableau}
-        2 \\
-        1 \\
-        1 \\
-        2
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        2 \\
-        1 \\
-        2 \\
-        1
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        2 \\
-        2 \\
-        1 \\
-        1
-      \end{ytableau}\quad.\quad          
-    \end{align*}
-
-    $L_{\lambda, (2,1,1)} = 12$:
-    \begin{align*}
-      &\begin{ytableau}
-        1 \\
-        1 \\
-        2 \\
-        3
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        1 \\
-        3 \\
-        2
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        2 \\
-        1 \\
-        3
-      \end{ytableau}\quad,\quad 
-      \begin{ytableau}
-        1 \\
-        2 \\
-        3 \\
-        1
-      \end{ytableau}\quad,\quad \\
-      &\begin{ytableau}
-        1 \\
-        3 \\
-        1 \\
-        2
-      \end{ytableau}\quad,\quad
-      \begin{ytableau}
-        1 \\
-        3 \\
-        2 \\
-        1
-      \end{ytableau}\quad,\quad 
-      \begin{ytableau}
-        2 \\
-        1 \\
-        1 \\
-        3
-      \end{ytableau}\quad,\quad 
-      \begin{ytableau}
-        2 \\
-        1 \\
-        3 \\
-        1
-      \end{ytableau}\quad,\quad  \\ 
-      &\begin{ytableau}
-        2 \\
-        3 \\
-        1 \\
-        1
-      \end{ytableau}\quad,\quad 
-      \begin{ytableau}
-        3 \\
-        1 \\
-        1 \\
-        2
-        \end{ytableau}\quad,\quad 
-      \begin{ytableau}
-        3 \\
-        1 \\
-        2 \\
-        1
-      \end{ytableau}\quad,\quad      
-      \begin{ytableau}
-        3 \\
-        2 \\
-        1 \\
-        1
-      \end{ytableau}\quad.\quad
+      $L_{\lambda, (4)} = 1 $:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          1 \\
+          1
+        \end{ytableau}\quad.
       \end{align*}
+
+      $L_{\lambda, (3,1)} = 4 $:
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          1 \\
+          2 \\
+          1
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          2 \\
+          1 \\
+          1
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          1 \\
+          1 \\
+          1
+        \end{ytableau}\quad.\quad            
+      \end{align*}
+
+      $L_{\lambda, (2,2)} = 6$:
+
+      \begin{align*}
+        \begin{ytableau}
+          1 \\
+          1 \\
+          2 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          2 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          2 \\
+          2 \\
+          1
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          2 \\
+          1 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          1 \\
+          2 \\
+          1
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          2 \\
+          1 \\
+          1
+        \end{ytableau}\quad.\quad          
+      \end{align*}
+
+      $L_{\lambda, (2,1,1)} = 12$:
+      \begin{align*}
+        &\begin{ytableau}
+           1 \\
+           1 \\
+           2 \\
+           3
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          1 \\
+          3 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          2 \\
+          1 \\
+          3
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          1 \\
+          2 \\
+          3 \\
+          1
+        \end{ytableau}\quad,\quad \\
+        &\begin{ytableau}
+           1 \\
+           3 \\
+           1 \\
+           2
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          3 \\
+          2 \\
+          1
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          2 \\
+          1 \\
+          1 \\
+          3
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          2 \\
+          1 \\
+          3 \\
+          1
+        \end{ytableau}\quad,\quad  \\ 
+        &\begin{ytableau}
+           2 \\
+           3 \\
+           1 \\
+           1
+         \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          3 \\
+          1 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          3 \\
+          1 \\
+          2 \\
+          1
+        \end{ytableau}\quad,\quad      
+        \begin{ytableau}
+          3 \\
+          2 \\
+          1 \\
+          1
+        \end{ytableau}\quad.\quad
+      \end{align*}
+
+      $L_{\lambda, (1^4)} = 24$:
+      \begin{align*}
+        &\begin{ytableau}
+           1 \\
+           2 \\
+           3 \\
+           4
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          2 \\
+          4 \\
+          3
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          3 \\
+          2 \\
+          4
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          3 \\
+          4 \\
+          2
+        \end{ytableau}\quad,\quad \\
+        &\begin{ytableau}
+           1 \\
+           4 \\
+           2 \\
+           3
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          1 \\
+          4 \\
+          3 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          3 \\
+          1 \\
+          4
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          3 \\
+          4 \\
+          1
+        \end{ytableau}\quad,\quad\\
+        &\begin{ytableau}
+           2 \\
+           4 \\
+           1 \\
+           3
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          4 \\
+          3 \\
+          1
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          3 \\
+          4 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          3 \\
+          4 \\
+          2 \\
+          1
+        \end{ytableau}\quad,\quad\\
+        &\begin{ytableau}
+           2 \\
+           1 \\
+           3 \\
+           4
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          2 \\
+          1 \\
+          4 \\
+          3
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          3 \\
+          1 \\
+          2 \\
+          4
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          3 \\
+          1 \\
+          4 \\
+          2
+        \end{ytableau}\quad,\quad\\
+        &\begin{ytableau}
+           3 \\
+           2 \\
+           1 \\
+           4
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          3 \\
+          2 \\
+          4 \\
+          1
+        \end{ytableau}\quad,\quad 
+        \begin{ytableau}
+          4 \\
+          1 \\
+          2 \\
+          3
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          4 \\
+          1 \\
+          3 \\
+          2
+        \end{ytableau}\quad,\quad\\
+        &\begin{ytableau}
+           4 \\
+           2 \\
+           1 \\
+           3
+         \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          4 \\
+          2 \\
+          3 \\
+          1
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          4 \\
+          3 \\
+          1 \\
+          2
+        \end{ytableau}\quad,\quad
+        \begin{ytableau}
+          4 \\
+          3 \\
+          2 \\
+          1
+        \end{ytableau}\quad.\quad
+      \end{align*}
+      The fifth row is $(1,4,6,12,24)$.
+    \end{itemize}
+    Putting all the rows into a matrix yields
+    \begin{align*}
+      L = 
+      \begin{pmatrix}
+        1 & 0 & 0 & 0 & 0 \\
+        1 & 1 & 0 & 0 & 0 \\
+        1 & 0 & 2 & 0 & 0 \\
+        1 & 2 & 2 & 3 & 0 \\
+        1 & 4 & 6 & 12 & 24
+      \end{pmatrix}
+    \end{align*}
   \end{enumerate}
 \end{proof}
 \end{document}
