Work on first question.

--- a/symmetric_fxns/sym6.tex
+++ b/symmetric_fxns/sym6.tex
@@ -675,13 +675,20 @@
         1 & 4 & 6 & 12 & 24
       \end{pmatrix}
     \end{align*}
-
-    We have $\abs{\lambda} = 4$, so 
+    Lastly:
     \begin{align*}
       \epsilon
       &= 
       \begin{pmatrix}
-        (-1)^{4-1} & 0 & 0 & 0 & 0 \\
+        (-1)^{\abs{\lambda}- \ell(4)} & 0 & 0 & 0 & 0 \\
+        0 & (-1)^{\abs{\lambda}-\ell(3,1)} & 0 & 0 & 0 \\
+        0 & 0 & (-1)^{\abs{\lambda}-\ell(2,2)} & 0 & 0 \\
+        0 & 0 & 0 & (-1)^{\abs{\lambda}-\ell(2,1,1)} & 0 \\
+        0 & 0 & 0 & 0 & (-1)^{\abs{\lambda}-\ell(1^4)} 
+      \end{pmatrix} \\
+      &=
+      \begin{pmatrix}
+        (-1)^{4- 1} & 0 & 0 & 0 & 0 \\
         0 & (-1)^{4-2} & 0 & 0 & 0 \\
         0 & 0 & (-1)^{4-2} & 0 & 0 \\
         0 & 0 & 0 & (-1)^{4-3} & 0 \\
@@ -694,10 +701,9 @@
         0 & 0 & 1 & 0 & 0 \\
         0 & 0 & 0 & -1 & 0 \\
         0 & 0 & 0 & 0 & 1
-      \end{pmatrix}
-    \end{align*}
-
-    \begin{align*}
+      \end{pmatrix} \\
+      \text{and}
+      \\
       z
       &=
       \begin{pmatrix}
@@ -705,7 +711,15 @@
         0 & z_{(3,1)} & 0 & 0 & 0 \\
         0 & 0 & z_{(2,2)} & 0 & 0 \\
         0 & 0 & 0 & z_{(2,1,1)} & 0 \\
-        0 & 0 & 0 & 0 & z_{(1,1,1,1)}
+        0 & 0 & 0 & 0 & z_{(1^4)}
+      \end{pmatrix} \\
+      &=
+      \begin{pmatrix}
+        4^11! & 0 & 0 & 0 & 0 \\
+        0 & 3^11! & 0 & 0 & 0 \\
+        0 & 0 & 2^22! & 0 & 0 \\
+        0 & 0 & 0 & 1^22!2^11! & 0 \\
+        0 & 0 & 0 & 0 & 1^44!
       \end{pmatrix} \\
       &=
       \begin{pmatrix}
